half created calc

--- a/Раздел 5. Продвинутый JavaSript/97. Создаем калькулятор на сайте, часть 1/Food/css/style.css
+++ b/Раздел 5. Продвинутый JavaSript/97. Создаем калькулятор на сайте, часть 1/Food/css/style.css
@@ -345,7 +345,8 @@ a {
 }
 .calculating__choose-item_active {
   color: #fff;
-  background-color: #54ed39;
+  background-color: green;
+  border: 5px solid white;
 }
 .calculating__choose_medium {
   width: 743px;
