--- a/Раздел 3. Дополнительные основы JS/55. Живые коллекции и полезные методы/style.css
+++ b/Раздел 3. Дополнительные основы JS/55. Живые коллекции и полезные методы/style.css
@@ -1,12 +1,21 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .box {
-    width: 150px;
-    height: 150px;
-    margin-bottom: 10px;
-    background-color: black;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10px;
+  background-color: black;
+}
+
+.triangle-up {
+  width: 0;
+  height: 250;
+  border-left: 75px solid transparent;
+  border-right: 75px solid transparent;
+  border-bottom: 50px solid black;
+  margin-bottom: 20px;
 }
