--- a/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charInfo/charInfo.scss
+++ b/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charInfo/charInfo.scss
@@ -47,13 +47,17 @@
             position: relative;
             margin-top: 10px;
         }
-        &-item {
+        &-item{
             width: 100%;
             padding: 0px 10px;
             line-height: 25px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             margin-top: 10px;
         }
+        &-item:hover {
+            color: red
+        }
+        
     }
     &__select {
         font-weight: bold;
@@ -61,5 +65,4 @@
         line-height: 24px;
         text-align: center;
     }
-
 }
