--- a/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charInfo/charInfo.scss
+++ b/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charInfo/charInfo.scss
@@ -1,12 +1,35 @@
 @import '../../style/variables.scss';
 
 .char {
+    position: relative;
     &__info {
         padding: 25px;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
-        position: relative;
-        z-index: 5;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 5; /* чтобы блок char__info оказался поверх фона */
         background-color: #fff;
+        // &__info-overlay {
+        //     position: fixed;
+        //     top: 0;
+        //     right: 0;
+        //     bottom: 0;
+        //     left: 0;
+        //     background-color: rgba(0, 0, 0, 0.5); /* тёмно-серый цвет фона с 50% прозрачности */
+        //     z-index: 4; /* чтобы фон был под блоком char__info */
+        //   }
+          
+        //   /* Добавляем элемент char__info-overlay после элемента char__info */
+        //   &__info + &__info-overlay {
+        //     display: none; /* по умолчанию фон скрыт */
+        //   }
+          
+        //   /* Добавляем стили для показа фона при активации блока char__info */
+        //   &__info:focus + &__info-overlay {
+        //     display: block;
+        //   }
         &-name {
             font-weight: bold;
             font-size: 22px;
@@ -66,3 +89,23 @@
         text-align: center;
     }
 }
+
+.char__info-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* тёмно-серый цвет фона с 50% прозрачности */
+    z-index: 4; /* чтобы фон был под блоком char__info */
+  }
+  
+  /* Добавляем элемент char__info-overlay после элемента char__info */
+  .char__info + .char__info-overlay {
+    display: none; /* по умолчанию фон скрыт */
+  }
+  
+  /* Добавляем стили для показа фона при активации блока char__info */
+  .char__info:focus + .char__info-overlay {
+    display: block;
+  }
