--- a/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charList/charList.scss
+++ b/Раздел 7. Средний фундоментальный уровень React/marvel_starter/src/components/charList/charList.scss
@@ -1,20 +1,26 @@
 @import '../../style/variables.scss';
 
 .char {
+   
     &__content {
         margin-top: 50px;
-        display: grid;
-        grid-template-columns: 650px 425px;
-        column-gap: 25px;
-        align-items: start;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // display: grid;
+        // grid-template-columns: 650px 425px;
+        // column-gap: 25px;
+        // align-items: start;
+        
     }
     &__grid {
         display: grid;
-        grid-template-columns: repeat(3, 200px);
+        grid-template-columns: repeat(5, 200px);
         column-gap: 25px;
         row-gap: 30px;
     }
     &__item {
+      
         width: 200px;
         height: 318px;
         background-color: $dark;
@@ -28,10 +34,11 @@
             object-fit: cover;
             transform: translate(-15px, -15px);
         }
-        &_selected {
-            box-shadow: 0 5px 20px $main-color;
-            transform: translateY(-8px);
-        }
+      &:hover,
+    &_selected { /* add hover selector and _selected modifier class */
+      box-shadow: 0 5px 20px $main-color;
+      transform: translateY(-8px);
+    }
     }
     &__name {
         font-weight: bold;
